--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.20.1",
     "modLoaders": [
       {
-        "id": "forge-47.1.47",
+        "id": "neoforge-1.20.1-47.1.99",
         "primary": true
       }
     ]
@@ -11,7 +11,7 @@
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
   "name": "Exigence 3",
-  "version": "3.0.9",
+  "version": "3.0.9.1",
   "author": "ZpprSprk",
   "files": [
     {
